--- a/usage.ipynb
+++ b/usage.ipynb
@@ -1,37 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running time: 0.0523 seconds\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "from sklearn.datasets import make_blobs\n",
-    "from ClusteringClass import Clustering\n",
-    "\n",
-    "# Generate random data\n",
-    "X, _ = make_blobs(n_samples=1000, centers=5, random_state=42)\n",
-    "\n",
-    "# Create an instance of Clustering class\n",
-    "clustering = Clustering(k=5)\n",
-    "\n",
-    "# Fit the data\n",
-    "clustering.fit(X)\n",
-    "\n",
-    "# Print running time to fit\n",
-    "clustering.time()"
-   ]
-  }
- ],
+ "cells": [],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
