--- a/usage.ipynb
+++ b/usage.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running time: 1.4314 seconds\n"
+      "Running time: 1.3403 seconds\n"
      ]
     }
    ],
@@ -75,7 +75,7 @@
     "kmeans.fit(X)\n",
     "\n",
     "# Plot the final partition of the data\n",
-    "kmeans.plot(X)"
+    "kmeans.plot(X, save=True)"
    ]
   },
   {
@@ -112,7 +112,7 @@
     "kmeanspp.fit(X)\n",
     "\n",
     "# Plot the final partition of the data\n",
-    "kmeanspp.plot(X)"
+    "kmeanspp.plot(X, save=True)"
    ]
   },
   {
@@ -149,7 +149,7 @@
     "kmedoids.fit(X)\n",
     "\n",
     "# Plot the final partition of the data\n",
-    "kmedoids.plot(X, cool=True)"
+    "kmedoids.plot(X, cool=True, save=True)"
    ]
   },
   {
@@ -186,7 +186,7 @@
     "cmeans.fit(X)\n",
     "\n",
     "# Plot the final partition of the data\n",
-    "cmeans.plot(X, cool=True)"
+    "cmeans.plot(X, cool=True, save=True)"
    ]
   },
   {
